# chessbot

./: .gitignore  CMakeLists.txt
include/: defs.h
src/: board.cpp  main.cpp  perft.cpp  uci.cpp
